--- a/proje/package.json
+++ b/proje/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-date-object": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
